--- a/Flu_model/GSA_flu_model.ipynb
+++ b/Flu_model/GSA_flu_model.ipynb
@@ -8,7 +8,7 @@
     "**Instructions:** You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter. An asterisk will appear in the brackets at the top left of the box while the code is being exectued (this may take few seconds) and turns into a number when the execution is over. Alternatively,you can run the whole notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
     "# Using GSA to enhance model-informed decisions\n",
-    "Mathematical models are often used to inform decision-makers dealing with complex management problems. The model is used to predict the consequences of alternative intervention options, hence providing a quantitative assessment of their benefits and costs. In this context, Global Sensitivity Analysis (GSA) can be used to investigate the space of possible options in a more comprehensive and structured way, including a range of options possibly larger than the few ones that decision-makers would test in a traditional 'what-if?' analysis, and also helping to quantify the importance of intervention options relative to other factors that influence the system response but that are not controllable and potentially highly uncertain.\n",
+    "Mathematical models are often used to inform decision-makers dealing with complex management problems. The model is used to predict the consequences of alternative actions, hence providing a quantitative assessment of their benefits and costs, possibly under different uncertain scenarios. In this context, Global Sensitivity Analysis (GSA) can be used to investigate the space of possible actions in a more comprehensive and structured way, including a range of actions possibly larger than the few ones that decision-makers would test in a traditional 'what-if?' analysis. GSA can also help quantifying the importance of these actions relative to other factors that influence the system response, but that are not controllable and potentially highly uncertain (Ref. 1).\n",
     "\n",
     "# A flu model example\n",
     "In this Notebook we will use a flu model, which provides a simple mathematical description of the spread of an infectious deasease, such as flu, within a population. The model divides the population into three \"compartments\":\n",
@@ -29,18 +29,18 @@
     "- **Contagion ratio**: proportion of contacts that result in infection\n",
     "- **Vaccination rate**: number of inviduals who are vaccinated per day during the outbreak\n",
     "\n",
-    "Let's imagine the following problem. In a city with a population of 100,000 people, we would like to simulate and compare three possible actions:\n",
+    "Let's imagine the following problem. In a city with a population of 100,000 people, we would like to simulate and compare three possible actions to be taken during the flu season:\n",
     "\n",
     "- Implementing social distancing and isolation measures to reduce the daily contact rate. It is estimated that a reduction of 0.1 points of this rate costs £200,000.\n",
     "- Distribute face masks to reduce the contagion rate. It is estimated that reducing this rate by 0.1 points costs £50,000.\n",
-    "- Increase of the number of daily vaccinations during the flu season at £70 per person.\n",
+    "- Increase of the number of daily vaccinations during the flu season. The vaccination cost is of £70 per person.\n",
     "\n",
-    "We don't know how many people are already vaccinated at the start of the flu season, but we have estimated that this number should range between 0 and 50,000 people (half of the population). We also don't know how long the recovery time is, but it is estimated that it ranges between 7 and 21 days.\n",
+    "We don't know how many people are already vaccinated at the start of the flu season, but we have estimated that this number should range between 0 and 50,000 people (half of the population). The recovery time is also uncertain, but it is estimated to vary between 7 and 21 days.\n",
     "\n",
     "The objective is to keep the sick population below **40%** (40,000 people) at any time, because above this number the healthcare system is overwhelmed. The total available budget to achieve this goal is **£3,000,000**.\n",
     "\n",
     "# Finding combinations of actions that achieve the desired outputs\n",
-    "Now use the model to determine a **robust** combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget of £3,000,000. Here, **robust** means that the combination should maintain the sick population below 40,000 under most of the possible scenarios of **Initial number of vaccinated individuals** and **Recovery time**."
+    "Now use the model to determine a **robust** combination of actions that maintain the sick population below 40,000 at all time for a total cost within the available budget of £3,000,000. Here, **robust** means that the combination should maintain the sick population below 40,000 under as many scenarios of **Initial number of vaccinated individuals** and **Recovery time** as possible."
    ]
   },
   {
@@ -80,14 +80,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that it is difficult to find an optimal and robust combination of parameters by varying one-at-a-time the values of the parameters.\n",
-    "\n",
+    "We can see that it is difficult to find a combination of parameters that achieve the set objectives by varying the parameter values one at the time.\n",
     "In order to facilitate this search we can apply Global Sensitivity Analysis (GSA).\n",
     "\n",
     "## Plot sensitivity indices and identify the most influential parameters\n",
-    "By applying GSA *(Ref. 3)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the equilibrium error. Being the influence lower as the sensitivity index decreases. \n",
+    "Here we use one particular GSA method, PAWN (Ref. 2). It provides a sensitivity index for each model parameter and each output of interest - in our case: the maximum number of individuals who are sick at the same time during the flu season, called **outbreak peak**; and the **total cost** of actions. The sensitivity index measures the relative importance of that parameter on that output: the lower the index, the smaller the influence. The method also provides a threshold value (Ref. 3): if the index of a parameter is above the threshold, then the parameter definitely has an effect on that output, whereas if the index is below the threshold the effect could be negligible.\n",
     "\n",
-    "First, run the cell below to obtain the sensitivity indices and identify what parameters in our model have a more relevant influence in reducing the peak of the Sick curve and hence and what actions are more effective regardless of their cost."
+    "First, run the cell below to obtain the sensitivity indices of the outbreak peak. They tell us which parameters have the most influence in attenuating the peak of the sick individuals curve, and hence which actions are more effective (regardless of their cost)."
    ]
   },
   {
@@ -130,9 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Among the possible actions, we observe that reducing the *Contact rate per day* has the highest sensitivity index and that reducing the *Cointagion rate* has the lowest. Among all the parameters the *Recovery time* has the lowest sensitivity. Therefore, among the possible actions, reducing the contact rate is potentially the most effective one, the least effective action is reducing the contagion rate  and that the recovery time has the lowest influence on the efficacy of the possible actions.\n",
+    "We observe that, among the 3 parameters connected to our possible actions, the *Contact rate per day* has the highest sensitivity index. Hence, reducing the contact rate by social distancing measure is potentially the most effective action. Among all parameters, we observe that the *Recovery time* has quite low sensitivity. This means that the uncertainty around the recovery time should have limited influence on the population dynamics and the efficacy of the possible actions, and hence we may neglect the uncertainty in this variable when assessing the robustness of our solutions.\n",
     "\n",
-    "Now run the cell below to obtain the sensitivity indices but this time in terms of cost so you can identify what parameters in our model have more influence in increasing the total cost."
+    "Now run the cell below to obtain the sensitivity indices of the total cost."
    ]
   },
   {
@@ -165,14 +164,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again we observe that *Contact rate per day* has the highest sensitivity index but this time in terms of costs. The paramter with the lowest sensitivity is *Recovery time* and the action with the lowest sensitivity is the *Contagion rate*. Therefore, the most costly action may be reducing the contact rate and the least costly actions may be reducing the contagion rate and reducing the recovery time.\n",
+    "We observe that *Contact rate per day* has a disproportionally high sensitivity index, which means that acting on it is likely to be very costly. In this sense, acting on the *Vaccination rate* and *Contagion ratio* may be more interesting given that their effects on the total costs are much lower.\n",
     "\n",
-    "Among the possible actions, we again observe that reducing the *Contact rate per day* has the highest sensitivity index and that reducing the *Cointagion rate* has the lowest. Also, among all the parameters the *Recovery time* has the lowest sensitivity. Therefore, the most costly action may be reducing the contact rate, the least costly action may be reducing the contagion rate and that the recovery time has the lowest influence on the efficacy of the possible actions.\n",
-    "\n",
-    "Looking at both figures above, can you identify the most cost-effective parameters and hence, actions to apply?\n",
-    "\n",
-    "## Let's try to to slow down the spread in a cost-effective way again...\n",
-    "Now taking into account the sensitivity indices calculated above try again to find a **robust** and **cost-effective combination of actions** that flattens the Sick curve so the **peak is below 40,000 sick individuals** (blue dashed line) with a **cost lower than £3,000,000**. Can you find a **robust** and **cost-effective combination of only two actions**?"
+    "## Finding combinations of actions that achieve the desired outputs, again...\n",
+    "Now taking into account what learnt so far through the GSA, can you find a combination of **two actions** only that flattens the Sick curve so that the **peak stays below 40,000** individuals (blue dashed line) with a **cost lower than £3,000,000**?"
    ]
   },
   {
@@ -218,13 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [SAFE Website](https://www.safetoolbox.info/)\n",
-    "2. [Introductory paper to SAFE - Pianosi et al. (2015)](https://www.sciencedirect.com/science/article/pii/S1364815215001188)\n",
-    "3. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
-    "4. [A review of available methods and workflows for Sensitivity Analysis - Pianosi et al. (2016)](https://www.sciencedirect.com/science/article/pii/S1364815216300287)\n",
-    "5. [What has Global Sensitivity Analysis ever done for us? A systematic review to support scientific advancement and to inform policy-making in earth system modelling - Wagener and Pianosi (2019)](https://www.sciencedirect.com/science/article/pii/S0012825218300990)\n",
-    "6. [Global Sensitivity Analysis . The primer - Saltelli et al. (2008)](http://www.andreasaltelli.eu/file/repository/A_Saltelli_Marco_Ratto_Terry_Andres_Francesca_Campolongo_Jessica_Cariboni_Debora_Gatelli_Michaela_Saisana_Stefano_Tarantola_Global_Sensitivity_Analysis_The_Primer_Wiley_Interscience_2008_.pdf) \n",
-    "7. [Dummy parameter - Zadeh et al. (2017)](https://www.sciencedirect.com/science/article/pii/S1364815217301159)"
+    "1. [What has Global Sensitivity Analysis ever done for us? A systematic review to support scientific advancement and to inform policy-making in earth system modelling - Wagener and Pianosi (2019)](https://www.sciencedirect.com/science/article/pii/S0012825218300990)\n",
+    "2. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
+    "3. [Dummy parameter - Zadeh et al. (2017)](https://www.sciencedirect.com/science/article/pii/S1364815217301159)"
    ]
   }
  ],
